# AutomatedJudgeSystem

./: .gitignore  CMakeLists.txt  ChineseTester.cpp  ChineseTester.sln  ChineseTester_D_NewVegasEdition_V0.87  ChiniseTester.cpp  Domain.h  README.md  Source.cpp  core.cpp  core.h  database.cpp  database.h  main.cpp
ChineseTester/: ChineseTester.vcxproj  ChineseTester.vcxproj.filters
Debug/: plusTwo.cpp
Resources/: ConsoleApplication1.cpp  MikeMirzayanov.cpp  data_base.sqlite3-journal  db.sqlite3  output.txt  output2.txt  task2init
Resources/database/: data_base.sqlite3
Resources/examples/task0/solution/: plus2.cpp
Resources/media/contests/: ichecker_QbHsYvZ.cpp
Resources/task2/: init
Resources/task2/answer/: 4
Resources/task2/solution/: plus.cpp
Resources/task2/tests/: 3  4  5  6
_debug/: ChineseTester.exp
_resources/compilers/: magicCPPCompiler.cmd
_resources/examples/task1/result/: 1  2
_resources/media/2/: plus.cpp
_resources/media/contests/: TestLibrary.h
cmake_scripts/: check_file.cmake  cmake_scripts.cmake  download_archive.cmake  download_file.cmake  prepare_file.cmake  prepare_lib.cmake
doc/: defug.txt  doc.txt
headers/: core.h  database.h  database_query.h  domain.h  errors.hpp  file_process.h  files_manager.hpp  getCPUTime.h  mike_mirzayanov_communication.h  my_process.h  my_strings.hpp  paths.hpp  pipe_process.h  problem_information.h  submission_information.h  testlib_message.h
headers/core/: compiler.hpp  core.hpp
headers/database/: database.hpp  database_query.hpp  postgres.hpp
headers/domain/: domain.hpp  errors.hpp  files_manager.hpp  my_strings.hpp  pair.hpp  paths.hpp
headers/process/: file_process.hpp  my_process.hpp  pipe_process.hpp
headers/structs/: problem_information.hpp  submission_information.hpp  testlib_message.hpp
libraries/: CMakeLists.txt  libraries.cmake
libraries/CPUTime/: CMakeLists.txt  CPUTime_sources.cmake
libraries/SQLite/: CMakeLists.txt  SQLite_sources.cmake
libraries/cputime/: CMakeLists.txt  getCPUTime.cpp
media/2/: 1.py  plus.cpp
media/contests/: 1checker_QbHsYvZ.cpp  checker_QbHsYvZ.cpp  testlib.h
release/: ChineseTester.exp  ChineseTester.lib
resources/compilers/: magicCPPCompiler.cmd
resources/examples/task0/checker/: checker.cpp
resources/examples/task1/result/: 4
resources/media/contests/: 1checker_QbHsYvZ.cpp  TestLibrary.h  checker_QbHsYvZ.cpp  checker_QbHsYvZ.cpp.bak
source/: chinese_tester.cpp  core.cpp  core.h  database.cpp  database.h  database_query.cpp  database_query.h  domain.h  domaine.cpp  main.cpp  mike_mirzayanov_communication.cpp  process.cpp  process.h  run.cpp  run.h  submission_information.cpp  submission_information.h  testlib_message.cpp
sources/: CMakeLists.txt  core.cpp  database.cpp  database_query.cpp  domaine.cpp  errors.cpp  file_process.cpp  files_manager.cpp  main.cpp  mike_mirzayanov_communication.cpp  my_process.cpp  my_strings.cpp  paths.cpp  pipe_process.cpp  problem_information.cpp  sources.cmake  submission_information.cpp  testlib_message.cpp
sources/algorithms/: algorithms_sources.cmake  suffix_tree.cpp  suffix_tree.hpp
sources/core/: CMakeLists.txt  code_info.cpp  code_info.hpp  compiler.cpp  compiler.hpp  core.cpp  core.hpp  core_sources.cmake  main.cpp  test.cpp  test.hpp  testlib_message.cpp  testlib_message.hpp
sources/database/: CMakeLists.txt  database.cpp  database.hpp  database_query.cpp  database_query.hpp  database_sources.cmake  postgres.cpp  postgres.hpp  postgresql.cpp  postgresql.hpp  sqlite_database.cpp  sqlite_database.hpp  submission_info.hpp
sources/domain/: CMakeLists.txt  class_member_functions.hpp  domain_sources.cmake  error_message.cpp  error_message.hpp  errors.cpp  file_manager.cpp  file_manager.hpp  files_manager.cpp  flags.hpp  math.cpp  math.hpp  metaprogramming.hpp  my_string.cpp  my_string.hpp  my_strings.cpp  pair.hpp  path.cpp  path.hpp  paths.cpp  storage.hpp  string.cpp  string.hpp  type.hpp
sources/main/: CMakeLists.txt  flags.hpp  main.cpp  main_sources.cmake  path.hpp
sources/process/: CMakeLists.txt  base_process.cpp  base_process.hpp  file_process.cpp  file_process.hpp  my_process.cpp  my_process.hpp  pipe_linux_process.cpp  pipe_linux_process.hpp  pipe_process.cpp  pipe_process.hpp  pipe_windows_process.cpp  pipe_windows_process.hpp  process.cpp  process.hpp  process_sources.cmake  windows_process.cpp  windows_process.hpp
sources/structs/: CMakeLists.txt  problem_information.cpp  problem_information.hpp  structs_sources.cmake  submission_information.cpp  submission_information.hpp  testlib_message.cpp  testlib_message.hpp
sources/tester/: code_info.cpp  code_info.hpp  compiler.cpp  compiler.hpp  core.cpp  core.hpp  test.cpp  test.hpp  tester_sources.cmake  testlib_message.cpp  testlib_message.hpp  thread_signals.cpp
